test/corpus/functions.txt
===
Simple function
===

Function test Returns Integer
End_Function

---

(source_file
  (function_definition
    (function_header
      (keyword)
      name: (identifier)
      (keyword)
      return_type: (system_typedecl
        name: (system_type)))
    (function_footer
      (keyword))))

===
Function with parameters
===

Function test Integer iArg1 String iArg2 Returns Integer
End_Function

---

(source_file
  (function_definition
    (function_header
      (keyword)
      name: (identifier)
      (parameter
        type: (system_typedecl
          name: (system_type))
        name: (identifier))
      (parameter
        type: (system_typedecl
          name: (system_type))
        name: (identifier))
      (keyword)
      return_type: (system_typedecl
        name: (system_type)))
    (function_footer
      (keyword))))
