test/corpus/getsetsend.txt
===
Get statement
===

Object oPromptList is a cWebPromptList
    Procedure Prompt_Callback Handle hoPrompt
        Get SelectedColumnValues of hoPrompt 0 to selectedCustomers
    End_Procedure
End_Object

---

(source_file
  (object_definition
    (object_header
      (keyword)
      name: (identifier)
      (keyword)
      (keyword)
      superclass: (identifier))
    (procedure_definition
      (procedure_header
        (keyword)
        name: (identifier)
        (parameter
          type: (system_typedecl
            name: (system_type))
          name: (identifier)))
      (get_statement
        (keyword)
        name: (identifier)
        (keyword)
        receiver: (identifier)
        (number_literal)
        (keyword)
        (identifier))
      (procedure_footer
        (keyword)))
    (object_footer
      (keyword))))

===
Set statement
===

Object oPromptList is a cWebPromptList
    Set pbFillHeight to True
    Set piColumnSpan to 6
    Set Size to 10 10

    Procedure Prompt_Callback Handle hoPrompt
        Set phoInvokingObject of hoPrompt to Self
    End_Procedure
End_Object

---

(source_file
  (object_definition
    (object_header
      (keyword)
      name: (identifier)
      (keyword)
      (keyword)
      superclass: (identifier))
    (set_statement
      (keyword)
      name: (identifier)
      (keyword)
      (identifier))
    (set_statement
      (keyword)
      name: (identifier)
      (keyword)
      (number_literal))
    (set_statement
      (keyword)
      name: (identifier)
      (keyword)
      (number_literal)
      (number_literal))
    (procedure_definition
      (procedure_header
        (keyword)
        name: (identifier)
        (parameter
          type: (system_typedecl
            name: (system_type))
          name: (identifier)))
      (set_statement
        (keyword)
        name: (identifier)
        (keyword)
        receiver: (identifier)
        (keyword)
        (identifier))
      (procedure_footer
        (keyword)))
    (object_footer
      (keyword))))

===
Simple send statement
===

Send Popup

---

(source_file
  (send_statement
    (keyword)
    name: (identifier)))

===
Send statement with target object
===

Send Popup of Customer_sl

---

(source_file
  (send_statement
    (keyword)
    name: (identifier)
    (keyword)
    receiver: (identifier)))

===
Send statement with target object and parameters
===

Send Request_Read of oCustomer_DD FIRST_RECORD iFileNum 3

---

(source_file
  (send_statement
    (keyword)
    name: (identifier)
    (keyword)
    receiver: (identifier)
    (identifier)
    (identifier)
    (number_literal)))

===
Forward send/get/set statement
===

Forward Send Popup
Forward Get SelectedColumnValues to selectedCustomers
Forward Set pbEnabled to bEnabled

---

(source_file
  (send_statement
    (call_modifier
      (keyword))
    (keyword)
    name: (identifier))
  (get_statement
    (call_modifier
      (keyword))
    (keyword)
    name: (identifier)
    (keyword)
    (identifier))
  (set_statement
    (call_modifier
      (keyword))
    (keyword)
    name: (identifier)
    (keyword)
    (identifier)))

===
Delegate send/get/set statement
===

Delegate Send Popup
Delegate Get SelectedColumnValues to selectedCustomers
Delegate Set pbEnabled to bEnabled

---

(source_file
  (send_statement
    (call_modifier
      (keyword))
    (keyword)
    name: (identifier))
  (get_statement
    (call_modifier
      (keyword))
    (keyword)
    name: (identifier)
    (keyword)
    (identifier))
  (set_statement
    (call_modifier
      (keyword))
    (keyword)
    name: (identifier)
    (keyword)
    (identifier)))

===
Broadcast send/get/set statement
===

Broadcast Send Popup
Broadcast Get SelectedColumnValues to selectedCustomers
Broadcast Set pbEnabled to bEnabled

---

(source_file
  (send_statement
    (call_modifier
      (keyword))
    (keyword)
    name: (identifier))
  (get_statement
    (call_modifier
      (keyword))
    (keyword)
    name: (identifier)
    (keyword)
    (identifier))
  (set_statement
    (call_modifier
      (keyword))
    (keyword)
    name: (identifier)
    (keyword)
    (identifier)))

===
Broadcast send/get/set statement
===

Broadcast Recursive Send Popup
Broadcast Recursive_Up Get SelectedColumnValues to selectedCustomers
Broadcast No_Stop Set pbEnabled to bEnabled
Broadcast Recursive No_Stop Set pbEnabled to bEnabled

---

(source_file
  (send_statement
    (call_modifier
      (keyword)
      (keyword))
    (keyword)
    name: (identifier))
  (get_statement
    (call_modifier
      (keyword)
      (keyword))
    (keyword)
    name: (identifier)
    (keyword)
    (identifier))
  (set_statement
    (call_modifier
      (keyword)
      (keyword))
    (keyword)
    name: (identifier)
    (keyword)
    (identifier))
  (set_statement
    (call_modifier
      (keyword)
      (keyword)
      (keyword))
    (keyword)
    name: (identifier)
    (keyword)
    (identifier)))

===
WebGet/WebSet statement
===

WebGet psValue to sValue
WebGet psValue of oWebForm1 to sValue
WebSet psValue to sValue
WebSet psValue of oWebForm1 to sValue

---

(source_file
  (web_get_statement
    (keyword)
    name: (identifier)
    (keyword)
    (identifier))
  (web_get_statement
    (keyword)
    name: (identifier)
    (keyword)
    receiver: (identifier)
    (keyword)
    (identifier))
  (web_set_statement
    (keyword)
    name: (identifier)
    (keyword)
    (identifier))
  (web_set_statement
    (keyword)
    name: (identifier)
    (keyword)
    receiver: (identifier)
    (keyword)
    (identifier)))
