test/corpus/objects.txt
===
Simple object
===

Object oFoo is a cBar
End_Object

---

(source_file
  (object_definition
    (object_header
      (keyword)
      name: (identifier)
      (keyword)
      (keyword)
      superclass: (identifier))
    (object_footer
      (keyword))))

===
Other object
===

Object oPromptList is a cWebPromptList
    Set pbFillHeight to True
    Set piColumnSpan to 6
End_Object

---

(source_file
  (object_definition
    (object_header
      (keyword)
      name: (identifier)
      (keyword)
      (keyword)
      superclass: (identifier))
    (set_statement
      (keyword)
      name: (identifier)
      (keyword)
      argument: (identifier))
    (set_statement
      (keyword)
      name: (identifier)
      (keyword)
      argument: (number_literal))
    (object_footer
      (keyword))))

===
Deferred object
===

Deferred_View Activate_oCommunication for ;
Object oCommunication is a dbView
End_Object

---

(source_file
  (keyword)
  (identifier)
  (keyword)
  (line_continuation)
  (object_definition
    (object_header
      (keyword)
      name: (identifier)
      (keyword)
      (keyword)
      superclass: (identifier))
    (object_footer
      (keyword))))
