test/corpus/procedures.txt
===
Simple procedure
===

Procedure test
    Procedure_Return
End_Procedure

---

(source_file
  (procedure_definition
    (procedure_header
      (keyword)
      name: (identifier))
    (procedure_return_statement
      (keyword))
    (procedure_footer
      (keyword))))

===
Procedure with parameters
===

Procedure test Integer iArg1 String iArg2
End_Procedure

---

(source_file
  (procedure_definition
    (procedure_header
      (keyword)
      name: (identifier)
      (parameter
        type: (system_typedecl
          name: (system_type))
        name: (identifier))
      (parameter
        type: (system_typedecl
          name: (system_type))
        name: (identifier)))
    (procedure_footer
      (keyword))))

===
Procedure with byref parameters
===

Procedure test Integer iArg1 String ByRef sArg2
End_Procedure

---

(source_file
  (procedure_definition
    (procedure_header
      (keyword)
      name: (identifier)
      (parameter
        type: (system_typedecl
          name: (system_type))
        name: (identifier))
      (parameter
        type: (system_typedecl
          name: (system_type))
        (keyword)
        name: (identifier)))
    (procedure_footer
      (keyword))))

===
Procedure Set
===

Procedure Set Server String sName
End_Procedure

---

(source_file
  (procedure_definition
    (procedure_header
      (keyword)
      set: (keyword)
      name: (identifier)
      (parameter
        type: (system_typedecl
          name: (system_type))
        name: (identifier)))
    (procedure_footer
      (keyword))))

===
Procedure with embedded dot name
===

Procedure Private.MyMethod String sName
End_Procedure

---

(source_file
  (procedure_definition
    (procedure_header
      (keyword)
      name: (identifier)
      (parameter
        type: (system_typedecl
          name: (system_type))
        name: (identifier)))
    (procedure_footer
      (keyword))))
