test/corpus/use.txt
===
Simple Use statement
===

Use Foo.pkg

---

(source_file
  (use_statement
    (keyword)
    (file_path)))

===
Use statement without extension
===

Use Foo

---

(source_file
  (use_statement
    (keyword)
    (file_path)))

===
Use statement with non-alpha characters
===

Use $Foo_test-bar.dd

---

(source_file
  (use_statement
    (keyword)
    (file_path)))

===
Use statement with path
===

Use System\Foo.pkg

---

(source_file
  (use_statement
    (keyword)
    (file_path)))

===
Use statement with trailing comment
===

Use Foo.dd // Include the .dd file

---

(source_file
  (use_statement
    (keyword)
    (file_path))
  (line_comment))
